--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   <body>
 
 <!-- Navbar template https://getbootstrap.com/docs/5.0/components/navbar/-->
-
-
 <nav class="navbar navbar-expand-sm navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Latitude</a>
+    <a class="navbar-brand text-white" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Plots
@@ -43,7 +41,52 @@
   </div>
 </nav>
 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-8">
+					<h3>
+						Summary: Latitude vs. X
+					</h3>
 
-<!-- Navbar template
+					<p class="text-info">
+            <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+            <br>
+              The purpose of this project was to analyze how weather changes as one gets closer to the equator. To accomplish this analysis,
+              I first pulled data form the OpenWeatherMap API to assemble a dataset on over 500 cities. Select the Data tab to view the dataset.
+            <br>
+            After assembling the dataset, I used Matplotlib to plot various aspects of the weather vs. latitude. Factors, usch as: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as
+            explanations and descriptions of any trends and correlations witnessed.
+          </p>
+				</div>
+				<div class="col-md-4">
+					<h3>
+						h3. Lorem ipsum dolor sit amet.
+					</h3>
+					<div class="row">
+						<div class="col-md-6">
+							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+						</div>
+						<div class="col-md-6">
+							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+						</div>
+						<div class="col-md-6">
+							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Navbar template-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
   </body>
 </html>
