--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
 <!-- Navbar template getbootstrap.com -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
+    <!-- navbar brand Title tab-->
     <a class="navbar-brand" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <!-- navbar collapse to include the dropdown-->
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
+        <!-- navbar collapse to include the dropdown-->
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
+        <!-- navbar comparison tab-->
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
         </li>
+        <!-- navbar Data tab-->
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
+        <!-- navbar dropdown-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown link
