forgot to change Plots to navbar title

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <!-- navbar dropdown-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
+            Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
             <a class="dropdown-item" href="humidity.html">Humidity</a>
             <a class="dropdown-item" href="cloud.html">Cloudiness</a>
-            <a class="dropdown-item" href="wind.html">Wind Speed</a>            
+            <a class="dropdown-item" href="wind.html">Wind Speed</a>
           </div>
         </li>
         <!-- navbar comparison tab-->
