--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- navbar collapse to include the dropdown-->
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <!-- navbar dropdown-->
         <li class="nav-item dropdown">
