coded html to add in a tag class to allow css to enclose and change the Summary title and image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
 
     <div class='container'>
       <div class="row">
-        <div class='col-md'>1</div>
+        <div class='col-lg-8 col-sm-12'>
+          <div class="box-summary">
+            <h3>
+              Summary: Latitude vs. X
+            </h3>
+            <p class="text-summary">
+              <img src="Assets/images/equatorsign.png" alt="Equator Lat and Long" width="50%" >
+            </p>
+          </div>
+        </div>
         <div id='foo' class='col-md'>
           <div class="row">
             <div class="col">A</div>
