successful in wrapping text around image, and fixing navbar padding

--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
             <h3>
               Summary: Latitude vs. X
             </h3>
-            <p class="text-summary">
-              <img src="Assets/images/equatorsign.png" alt="Equator Lat and Long" width="50%" >
+            <hr>
+              <div class="float-summary"><img src="Assets/images/equatorsign.png" alt="Equator Lat and Long" width="100%" height="100%"></div>
+              <br>
+              <p>
+              The purpose of this project was to analyze how weather changes as one gets closer to the equator. To accomplish this analysis,
+              I first pulled data form the OpenWeatherMap API to assemble a dataset on over 500 cities. Select the Data tab to view the dataset.
+              <br>
+              <br>
+              After assembling the dataset, I used Matplotlib to plot various aspects of the weather vs. latitude. Factors, usch as: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as
+              explanations and descriptions of any trends and correlations witnessed.
             </p>
           </div>
         </div>
