sized the summary column to be a better fit

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       </div>
     </nav>
 
-    <div class='container'>
+    <div class="container">
       <div class="row">
-        <div class='col-lg-8 col-sm-12'>
+        <div class="col-8">
           <div class="box-summary">
             <h3>
               Summary: Latitude vs. X
@@ -68,12 +68,24 @@
         </div>
         <div id='foo' class='col-md'>
           <div class="row">
-            <div class="col">A</div>
-            <div class="col">B</div>
+            <div class="col-lg-6 col-sm-3">A</div>
+              <a href="#">
+
+              </a>
+            <div class="col-lg-6 col-sm-3">B</div>
+              <a href="#">
+
+              </a>
           </div>
           <div class="row">
-            <div class="col">C</div>
-            <div class="col">D</div>
+            <div class="col-lg-6 col-sm-3">C</div>
+              <a href="#">
+
+              </a>
+            <div class="col-lg-6 col-sm-3">D</div>
+              <a href="#">
+
+              </a>
           </div>
         </div>
       </div>
