added html reference tags to visualization portion and css to create box

--- a/index.html
+++ b/index.html
@@ -67,25 +67,29 @@
           </div>
         </div>
         <div id='foo' class='col-md'>
-          <div class="row">
-            <div class="col-lg-6 col-sm-3">A</div>
-              <a href="#">
+          <div class="visual-summary">
+            <h2>Visualizations</h2>
+            <hr>
+            <div class="row">
+              <div class="col-lg-6 col-sm-3">A</div>
+                <a href="maxtemp.html">
 
-              </a>
-            <div class="col-lg-6 col-sm-3">B</div>
-              <a href="#">
+                </a>
+              <div class="col-lg-6 col-sm-3">B</div>
+                <a href="cloud.html">
 
-              </a>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-sm-3">C</div>
-              <a href="#">
+                </a>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 col-sm-3">C</div>
+                <a href="wind.html">
 
-              </a>
-            <div class="col-lg-6 col-sm-3">D</div>
-              <a href="#">
+                </a>
+              <div class="col-lg-6 col-sm-3">D</div>
+                <a href="humidity.html">
 
-              </a>
+                </a>
+            </div>
           </div>
         </div>
       </div>
