changed columns to better fit

--- a/index.html
+++ b/index.html
@@ -66,29 +66,34 @@
             </p>
           </div>
         </div>
-        <div id='foo' class='col-md'>
+        <div class="col-4">
           <div class="visual-summary">
             <h2>Visualizations</h2>
             <hr>
             <div class="row">
-              <div class="col-lg-6 col-sm-3">A</div>
+              <div class="col-lg-6">
                 <a href="maxtemp.html">
-
+                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
                 </a>
-              <div class="col-lg-6 col-sm-3">B</div>
+              </div>
+              <div class="col-lg-6">
                 <a href="cloud.html">
-
+                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
                 </a>
+              </div>
             </div>
+          <br>
             <div class="row">
-              <div class="col-lg-6 col-sm-3">C</div>
+              <div class="col-lg-6">
                 <a href="wind.html">
-
+                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
                 </a>
-              <div class="col-lg-6 col-sm-3">D</div>
+              </div>
+              <div class="col-lg-6">
                 <a href="humidity.html">
-
+                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
                 </a>
+              </div>
             </div>
           </div>
         </div>
