finished with landing page

--- a/index.html
+++ b/index.html
@@ -72,27 +72,35 @@
             <hr>
             <div class="row">
               <div class="col-lg-6">
-                <a href="maxtemp.html">
-                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
-                </a>
+                <div class="max-image">
+                  <a href="maxtemp.html">
+                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
+                  </a>
+                </div>
               </div>
               <div class="col-lg-6">
-                <a href="cloud.html">
-                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
-                </a>
+                <div class="max-image">
+                  <a href="cloud.html">
+                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
+                  </a>
+                </div>
               </div>
             </div>
           <br>
             <div class="row">
               <div class="col-lg-6">
-                <a href="wind.html">
-                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
-                </a>
+                <div class="max-image">
+                  <a href="wind.html">
+                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
+                  </a>
+                </div>
               </div>
               <div class="col-lg-6">
-                <a href="humidity.html">
-                  <img class="img-thumbnail rounded float-left" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
-                </a>
+                <div class="max-image">
+                  <a href="humidity.html">
+                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
