fixed my resizing for screen issue, made the connection for lg-md-sm

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-8">
+        <div class="col-lg-8 col-sm-12">
           <div class="box-summary">
             <h3>
               Summary: Latitude vs. X
@@ -66,19 +66,19 @@
             </p>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4 col-sm-12">
           <div class="visual-summary">
             <h2>Visualizations</h2>
             <hr>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-1 col-sm-3">
                 <div class="max-image">
                   <a href="maxtemp.html">
                     <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
                   </a>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-1 col-sm-3">
                 <div class="max-image">
                   <a href="cloud.html">
                     <img class="img-thumbnail rounded float-left" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
@@ -88,14 +88,14 @@
             </div>
           <br>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-1 col-sm-3">
                 <div class="max-image">
                   <a href="wind.html">
                     <img class="img-thumbnail rounded float-left" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
                   </a>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-1 col-sm-3">
                 <div class="max-image">
                   <a href="humidity.html">
                     <img class="img-thumbnail rounded float-left" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
