--- a/index.html
+++ b/index.html
@@ -46,14 +46,20 @@
       </div>
     </nav>
 
+<!-- Used Grid documentation to build - getbootstrap.com -->
+    <!-- Create div container to adjust and style with css -->
     <div class="container">
+      <!-- Create row to hold both Summary box and visual box - think parent box -->
       <div class="row">
+        <!-- Create column within row to hold one box for Summary, lg md sm is for resizing using bootstrap -->
         <div class="col-lg-8 col-sm-12">
+          <!-- Create own box to allow flex and style separately -->
           <div class="box-summary">
             <h3>
               Summary: Latitude vs. X
             </h3>
             <hr>
+              <!-- Specific class to allow text to wrap around image, used MDN documentation for help -->
               <div class="float-summary"><img src="Assets/images/equatorsign.png" alt="Equator Lat and Long" width="100%" height="100%"></div>
               <br>
               <p>
@@ -66,14 +72,18 @@
             </p>
           </div>
         </div>
+        <!-- Create column for child box to hold visualization title and images, will help with float -->
         <div class="col-lg-4 col-sm-12">
           <div class="visual-summary">
             <h2>Visualizations</h2>
             <hr>
+            <!-- Create child row for further styling and to hold two of four images -->
             <div class="row">
               <div class="col-lg-6 col-md-1 col-sm-3">
+                <!-- Create class specific for all images to allow for size to fill entire box -->
                 <div class="max-image">
                   <a href="maxtemp.html">
+                    <!-- Use thumbnail in bootstrap to round and float images automatically with bootstrap css stylesheet -->
                     <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
                   </a>
                 </div>
