changed maxtemp to meet screenshot img and moved the float class to not wrap text

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
     </nav>
 <!-- Used Grid documentation to build - getbootstrap.com -->
+    <!-- Content for summary and visualization boxes -->
     <!-- Create div container to adjust and style with css -->
     <div class="container">
       <!-- Create row to hold both Summary box and visual box - think parent box -->
