changed humid page to meet req and analysis

--- a/humidity.html
+++ b/humidity.html
@@ -58,15 +58,15 @@
        <!-- Create own box to allow flex and style separately -->
        <div class="box-summary">
          <h3>
-           Analysis: Latitude vs Max Temperature
+           Analysis: Latitude vs Humidity
          </h3>
          <hr>
            <!-- Specific class to allow text to wrap around image, used MDN documentation for help -->
            <!-- Changed class to not use style css to wrap text -->
-           <div class="float"><img src="Assets/images/latVStemp_scatter.png" alt="Max Temperature vs Latitude" width="100%" height="100%"></div>
+           <div class="float"><img src="Assets/images/latVShumid_scatter.png" alt="Humidity vs Latitude" width="100%" height="100%"></div>
            <br>
            <p>
-           As expected this graph shows the max temperatures peak near, or at, the equator while dropping steadily as you move away in either direction. Another notation to make would be that the southern hemisphere shows that it was warmer this time of year in comparison with the northern hemisphere. This can be attributed to the earth's direction it is tilted at the time of year this was analyzed.
+            Without doing a deeper analysis, the graph alone doesn't clearly indicate a correlation between humidity and latitude. Especially with the various countries plotted near a very low humidity and near the equator. I would prefer to further analyze this, rather than speculate by viewing just this graph.
            </p>
        </div>
      </div>
@@ -115,7 +115,8 @@
      </div>
    </div>
  </div>
- <!-- Required script to reference and citation for bootstrap templates and css -->
+
+   <!-- Required script to reference and citation for bootstrap templates and css -->
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
