--- a/cloud.html
+++ b/cloud.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- My style sheet link-reference -->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Humidity Analysis</title>
+    <title>Cloudiness Analysis</title>
   </head>
 
   <body>
@@ -58,7 +58,7 @@
        <!-- Create own box to allow flex and style separately -->
        <div class="box-summary">
          <h3>
-           Analysis: Latitude vs Humidity
+           Analysis: Latitude vs Cloudiness
          </h3>
          <hr>
            <!-- Specific class to allow text to wrap around image, used MDN documentation for help -->
@@ -66,7 +66,7 @@
            <div class="float"><img src="Assets/images/latVShumid_scatter.png" alt="Humidity vs Latitude" width="100%" height="100%"></div>
            <br>
            <p>
-            Without doing a deeper analysis, the graph alone doesn't clearly indicate a correlation between humidity and latitude. Especially with the various countries plotted near a very low humidity and near the equator. I would prefer to further analyze this, rather than speculate by viewing just this graph.
+            There seems to be a slight correlation of cloud cover. The interesting observation one could further investigate are the dense data surrounding the 0%, 20%, 40%, 75%, 90% and 100% markers. It would be interesting to see what aspects of the dataset could determine why these countries have more cloud coverage.
            </p>
        </div>
      </div>
