--- a/comparison.html
+++ b/comparison.html
@@ -51,8 +51,8 @@
     <!-- Create div container to adjust and style with css -->
     <div class="container-fluid">
       <!-- Create row to hold Comparison box - think parent box -->
-      <div class="row">
-        <div class="col-lg-6 col-sm-12">
+      <div class="row justify-content-center">
+        <div class="col-lg-10 col-sm-12">
           <div class="comparison">
             <h2 class="h2-compare">Comparison: Latitude vs X</h2>
             <hr>
@@ -60,38 +60,42 @@
               Click any plot to get an in-depth analysis.
             </p>
             <!-- Create child row for further styling and to hold two of four images -->
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-lg-6 col-md-1 col-sm-3">
+                <!-- Created new header to make visual better -->
                 <h6>vs Max Temp</h6>
                 <!-- Create class specific for all images to allow for size to fill entire box -->
-                <div class="max-image">
+                <div class="compare-image">
                   <a href="maxtemp.html">
-                    <!-- Use thumbnail in bootstrap to round and float images automatically with bootstrap css stylesheet -->
-                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
+                    <!-- Use rounded mx-auto d-block in bootstrap to center https://getbootstrap.com/docs/4.0/content/images/#image-thumbnails -->
+                    <img class="rounded mx-auto d-block" src="Assets\images\latVStemp_scatter.png" alt="Max Temperature vs Latitude">
                   </a>
                 </div>
               </div>
               <div class="col-lg-6 col-md-1 col-sm-3">
-                <div class="max-image">
+                <h6>vs Cloudiness</h6>
+                <div class="compare-image">
                   <a href="cloud.html">
-                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
+                    <img class="rounded mx-auto d-block" src="Assets\images\latVScloud_scatter.png" alt="Cloudiness vs Latitude">
                   </a>
                 </div>
               </div>
             </div>
           <br>
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-lg-6 col-md-1 col-sm-3">
-                <div class="max-image">
+                <h6>vs Wind Speed</h6>
+                <div class="compare-image">
                   <a href="wind.html">
-                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
+                    <img class="rounded mx-auto d-block" src="Assets\images\latVSwind_scatter.png" alt="Wind vs Latitude">
                   </a>
                 </div>
               </div>
               <div class="col-lg-6 col-md-1 col-sm-3">
-                <div class="max-image">
+                <h6>vs Humidity</h6>
+                <div class="compare-image">
                   <a href="humidity.html">
-                    <img class="img-thumbnail rounded float-left" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
+                    <img class="rounded mx-auto d-block" src="Assets\images\latVShumid_scatter.png" alt="Humidity vs Latitude">
                   </a>
                 </div>
               </div>
